--- a/results/R/05_DTC.html
+++ b/results/R/05_DTC.html
@@ -8,7 +8,7 @@
 
 <meta name="author" content="Puck Quarles van Ufford">
 
-<title>05_DTC</title>
+<title>Classification with a distance-to-centroid model</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -3090,7 +3090,7 @@ vertical-align: -.125em;
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">05_DTC</h1>
+<h1 class="title">Classification with a distance-to-centroid model</h1>
 </div>
 
 
