--- a/results/R/06_rDTC.html
+++ b/results/R/06_rDTC.html
@@ -8,7 +8,7 @@
 
 <meta name="author" content="Puck Quarles van Ufford">
 
-<title>06_rDTC</title>
+<title>Classification with a ranked distance-to-centroid model</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -3090,7 +3090,7 @@ vertical-align: -.125em;
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">06_rDTC</h1>
+<h1 class="title">Classification with a ranked distance-to-centroid model</h1>
 </div>
 
 
